2010-05-17 Jens Thoms Toerring    <jt@toerring.de>

	* lib/tbox.c: As Serge Bromow pointed out in the functions
	fl_set_browser_topline(), fl_set_browser_bottomline() and
	fl_set_browser_centerline() there was a missing check for
	the browser being empty, resulting in dereferencing a NULL
	pointer.

2010-05-15 Jens Thoms Toerring    <jt@toerring.de>

	* lib/handling.c, lib/include/Basic.h: After intensive
	discussions with Serge Bromow added new funtion that allows
	to switch back to the pre-1.0.91 behavior concerning when
	an interaction with an input object is considered to have
	ended.

2010-05-07 Jens Thoms Toerring    <jt@toerring.de>

	* lib/tbox.c: As Marcus D.Leech pointed out setting colors
	for a browser via fl_set_object_color() didn't work for
	the font color (always black), hopefully fixed

	* doc/part6_images.texi: Some more typos etc. found
	by LukenShiro removed

2010-05-05 Jens Thoms Toerring    <jt@toerring.de>

	* doc/part6_images.texi: A number of typos etc.
	found by LukenShiro removed.

2010-05-04 Jens Thoms Toerring    <jt@toerring.de>

	* image/image.c: LukenShiro pointed out a deviation between
	the diocumented return type of the flimage_free() function.
	It now returns void as already documented.

	* lib/font.c: Fix for (rather hypothetical buffer) overrun
	in get_fname().

2010-03-14 Jens Thoms Toerring    <jt@toerring.de>

	* clipboard.c: Converted error message into warning printed
	out when a selectio request is made to the XForms program for
	a type of Atom that XForms doesn't support. Thanks to Mark
	Adler for pointing out the problem.

2010-03-09 Jens Thoms Toerring    <jt@toerring.de>

	* Several changes to the way things re redrawn - there
	were some problems with redrawing labels that needed
	several changes to get it right (again).

	* Some unused stuff removed from include files

	* Corrections in the documentation

2010-01-09 Jens Thoms Toerring    <jt@toerring.de>
