@@ -1,3 +1,8 @@
+2010-05-18 Jens Thoms Toerring    <jt@toerring.de>
+
+	lib/objects.c: Another bug found by Serge Bromow fixed:
+	shortcuts with ALT key had stopped to work.
+
 2010-05-17 Jens Thoms Toerring    <jt@toerring.de>
 
 	* lib/tbox.c: As Serge Bromow pointed out in the functions
